# rasdaman-mcp

./: .gitignore  LICENSE  README.md  pylint.sh  pyproject.toml  requirements.txt
.github/workflows/: build-and-deploy-docs.yml  release.yml
docs/: MCP_DESIGN.md  REPORT.md  TECHNICAL_REFERENCE.md  conf.py  index.rst
src/: __init__.py  main.py  rasdaman_actions.py  wcps_crash_course.py  wcps_validator.py
src/wcps_parser/: README.md  query_validator.py  wcps.interp  wcpsLexer.interp  wcpsLexer.py  wcpsLexer.tokens  wcpsListener.py  wcpsParser.py
tests/: test_validator.py
